versioned_docs/version-8.3.1/sdks/flutter/matrixscan-pick/get-started.md
---
description: "In this guide you will learn step-by-step how to add MatrixScan Pick to your application. Implementing MatrixScan Pick involves two primary elements:                                                                              "

sidebar_position: 2
framework: flutter
keywords:
  - flutter
---

# Get Started

In this guide you will learn step-by-step how to add MatrixScan Pick to your application. Implementing MatrixScan Pick involves two primary elements:

- Barcode Pick: The data capture mode that is used for scan and pick functionality.
- A Barcode Pick View: The pre-built UI elements used to highlight items to be picked.

The general steps are:

- Initializing the Data Capture Context
- Configuring the Barcode Pick Mode
- Setup the Barcode Pick View
- Registering the Listener to notify about found items

## Prerequisites

Before starting with adding a capture mode, make sure that you have a valid Scandit Data Capture SDK license key and that you added the necessary dependencies. If you have not done that yet, check out [this guide](../add-sdk.md).

:::note
You can retrieve your Scandit Data Capture SDK license key by signing in to [your Scandit account](https://ssl.scandit.com/dashboard/sign-in).
:::

## Initialize the Data Capture Context

The first step to add capture capabilities to your application is to initialize the [Data Capture Context](https://docs.scandit.com/data-capture-sdk/flutter/core/api/data-capture-context.html#class-scandit.datacapture.core.DataCaptureContext) with a valid Scandit Data Capture SDK license key.

```dart
await DataCaptureContext.initialize("-- ENTER YOUR SCANDIT LICENSE KEY HERE --");
```

:::note
`DataCaptureContext` should be initialized only once. Use `DataCaptureContext.sharedInstance` to access it afterwards.
:::

## Configure the Barcode Pick Mode

The main entry point for the Barcode Pick Mode is the `BarcodePick` object. You can configure the supported Symbologies through its [`BarcodePickSettings`](https://docs.scandit.com/data-capture-sdk/flutter/barcode-capture/api/barcode-pick-settings.html), and set up the list of items that you want MatrixScan Pick to highlight.

Here we configure it for tracking EAN13 codes, but you should change this to the correct symbologies for your use case.

```dart
var settings = BarcodePickSettings();
settings.enableSymbology(Symbology.ean13Upca, true);
```

Then you have to create the list of items that will be picked and quantity to be picked for each item.

```dart
var items = <BarcodePickProduct>{
  BarcodePickProduct("9783598215438", 3),
  BarcodePickProduct("9783598215414", 3),
};
```

Create a product provider and the mode:

```dart
var productProvider = BarcodePickAsyncMapperProductProvider(items, productProviderCallback);
var mode = BarcodePick(DataCaptureContext.sharedInstance, settings, productProvider);
```

## Setup the `BarcodePickView`

MatrixScan Pick’s built-in AR user interface includes buttons and overlays that guide the user through the scan and pick process. By adding a [`BarcodePickView`](https://docs.scandit.com/data-capture-sdk/flutter/barcode-capture/api/ui/barcode-pick-view.html#class-scandit.datacapture.barcode.pick.ui.BarcodePickView), the scanning interface is added automatically to your application.

The `BarcodePickView` appearance can be customized through [`BarcodePickViewSettings`](https://docs.scandit.com/data-capture-sdk/flutter/barcode-capture/api/ui/barcode-pick-view-settings.html#class-scandit.datacapture.barcode.pick.ui.BarcodePickViewSettings) to match your application’s look and feel. The following settings can be customized:

* Colors of dots in augmented reality overlay
* Enable sound and haptic alerts
* Guidelines text
* Showing hints
* Finish button
* Pause button
* Zoom button
* Loading Dialog

```dart
var viewSettings = BarcodePickViewSettings(
  // ...
);
```

Construct a new `BarcodePickView`.

```dart
var barcodePickView = BarcodePickView.forModeWithViewSettings(DataCaptureContext.sharedInstance, mode, viewSettings);
```

Connect the `BarcodePickView` to the Widget lifecycle. The widget is dependent on calling `widgetPaused` and `widgetResumed` to set up the camera and its overlays properly.

```dart
@override
void didChangeAppLifecycleState(AppLifecycleState state) {
  if (state == AppLifecycleState.resumed) {
    // Resume finding by calling the BarcodePickView widgetResumed function.
    // Under the hood, it re-enables the BarcodePick mode and makes sure the view is properly
    // setup.
    barcodePickView.widgetResumed();
  } else {
    // Pause finding by calling the BarcodePickView widgetPaused function.
    // Under the hood, it will disable the mode and free resources that are not needed in a
    // paused state.
    barcodePickView.widgetPaused();
  }
}
```

## Register the Listener

The `BarcodePickView` displays a **Finish** button next to its shutter button. 

Register a [BarcodePickViewUiListener](https://docs.scandit.com/data-capture-sdk/flutter/barcode-capture/api/ui/barcode-pick-view.html#interface-scandit.datacapture.barcode.pick.ui.IBarcodePickViewUiListener) to be notified what items have been found once the finish button is pressed.

In this tutorial, we will then navigate back to the previous screen to finish the session.

```dart
barcodePickView.uiListener = this;

@override
void didTapFinishButton(BarcodePickView view) {
  // This method is called when the user presses the finish button.
}
```

## Start Searching

With everything configured, you can now start searching for items. This is done by calling `BarcodePickView.start()`.

```dart
barcodePickView.start();
```

This is the equivalent of pressing the Play button programmatically. It will start the search process, turn on the camera, and hide the item carousel.
